--- a/data_acid/blog/templates/blog/leads_form.html
+++ b/data_acid/blog/templates/blog/leads_form.html
@@ -18,10 +18,12 @@ $(document).ready(function() {
             data: $(this).serialize(),
             success: function(response) {
                 if (response.success) {
-                    alert('Form submitted successfully!');
+                    //console.log(response.userInput)
+                    window.dataLayer = window.dataLayer || []
+                    dataLayer.push({"profession":response.userInput.profession,"salary_range":response.userInput.salary_range})
                     // You can add further actions here if needed
                 } else {
-                    alert('Form submission failed. Please check the errors.');
+                   
                     console.log(response.errors);
                 }
             },
