--- a/data_acid/blog/static/blog/homepage.css
+++ b/data_acid/blog/static/blog/homepage.css
@@ -1,86 +1,93 @@
+/* Basic reset and minimalistic styling */
+
 body {
-    background-color: #f5f5f5;
+    margin: 0;
     font-family: Arial, sans-serif;
+}
+
+.nav-bar {
+    position: sticky;
+    top: 0;
+    background-color: white;
+    border-bottom: 1px solid black;
+}
+
+.navigation-links {
+    list-style-type: none;
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
 }
 
-.form-container {
-    background-color: #fff;
-    padding: 30px;
-    border-radius: 8px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    max-width: 400px;
+.navigation-links li {
+    display: inline;
+}
+
+.navigation-links a {
+    font-size: 12px;
+    display: inline-block;
+    color: black;
+    text-decoration: none;
+    padding: 12px 16px;
+    transition: color 0.3s ease;
+}
+
+.navigation-links a:hover {
+    color: #333; /* Darker color on hover */
+}
+
+.buttonMenu {
+    float: right;
+    color: black;
+    text-decoration: none;
+    padding: 12px 16px;
+    transition: color 0.3s ease;
+    display: none;
+}
+
+/*Content*/
+
+.content {
+    flex: 1; /* Flex grow to fill remaining space */
+}
+
+/*Footer*/
+
+.footer-container {
+    background-color: #f8f8f8;
+    padding: 20px;
+    width: 100%;
+    bottom: 0;
+   
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1200px;
     margin: 0 auto;
+    
 }
 
-h2 {
-    margin-top: 0;
-    font-size: 24px;
-    color: #333;
+.footer-heading {
+    flex: 1;
+    text-align: center;
+    padding: 10px;
 }
 
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.footer-heading h2 {
+    margin-bottom: 10px;
+    font-size: 14px;
 }
 
-.form-group {
-    margin-bottom: 20px;
-    text-align: left;
-    width: 100%;
-}
-
-label {
-    font-weight: bold;
-    color: #333;
-    margin-bottom: 6px;
+.footer-heading a {
     display: block;
-}
-
-input, textarea {
-    width: 100%;
-    border: none;
-    border-bottom: 1px solid #0074cc; /* Underline */
-    padding: 6px;
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    outline: none;
     color: #333;
-    transition: border-color 0.3s;
+    text-decoration: none;
+    margin-bottom: 5px;
+    transition: color 0.3s ease;
+    font-size:12px;
 }
 
-input::placeholder, textarea::placeholder {
-    color: #999;
+.footer-heading a:hover {
+    color: #666;
 }
-
-input:focus, textarea:focus {
-    border-bottom: 1px solid #005ca3; /* Underline on focus */
-}
-
-textarea {
-    resize: vertical;
-    min-height: 100px;
-}
-
-button {
-    background-color: #0074cc;
-    color: #fff;
-    border: none;
-    border-radius: 6px;
-    padding: 14px 24px;
-    cursor: pointer;
-    font-size: 18px;
-    transition: background-color 0.3s;
-}
-
-button:hover {
-    background-color: #005ca3;
-}
-
