--- a/data_acid/blog/templates/blog/leads_form.html
+++ b/data_acid/blog/templates/blog/leads_form.html
@@ -1,6 +1,6 @@
 
-
-
+{% load static %}
+<link rel="stylesheet" href="{% static 'blog/leads.css' %}">
 <form id="leadsForm" method="post">
     {% csrf_token %}
     {{ form.as_p }}
