--- a/data_acid/blog/templates/blog/homepage.html
+++ b/data_acid/blog/templates/blog/homepage.html
@@ -1,70 +1,1 @@
-
-{% load static %}
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-<link rel="stylesheet" href="{% static 'blog/homepage.css' %}">
-</head>
-
-
- <!-- HEADER MENU -->
-<body>
-    <nav class = "nav-bar">
-        <div class="navigation-links">
-            <a href="#about">INICIO</a> <!--Para hacer testing incluir # para marcar hacer fake en el click-->
-            <a href="#about">ARTÍCULOS</a>
-            <a href="#about">LIBROS</a>
-            <a href ="#about" class="buttonMenu" onclick="">[+]</a>
-        </div>
-    </nav>
-    <div class="content">
-        <p>Content</p>
-        <p>Content</p>
-        <p>Content</p>
-        <p>Content</p>
-        <p>Content</p>
-        <p>Content</p>
-        <p>Content</p>
-        <p>Content</p>
-        <p>Content</p>
-        <p>Content</p>
-        <p>Content</p>
-        <p>Content</p>
-        <p>Content</p>
-        <p>Content</p>
-        <p>Content</p>
-        <p>Content</p>
-    </div>
-
-</body>
-<footer>
-    <div class="footer-container">
-        <div class="footer">
-            <div class="footer-heading">
-                <h2>ABOUT</h2>
-                <a href="#">Demo</a>
-                <a href="#">Blog</a>
-                <a href="#">Pdf</a>
-                <a href="#">Role Map</a>
-            </div>
-            <div class="footer-heading">
-                <h2>CONTACT</h2>
-                <a href="#">Support</a>
-                <a href="#">Faq</a>
-                <a href="#">Sponsorships</a>
-                <a href="#">...</a>
-            </div>
-            <div class="footer-heading">
-                <h2>SOCIAL</h2>
-                <a href="#">Instagram</a>
-                <a href="#">Facebook</a>
-                <a href="#">Youtube</a>
-                <a href="#">Pinterest</a>
-            </div>
-        </div>
-    </div>
- 
-
-</html>
+{% extends "blog/base.html" %}
