--- a/data_acid/blog/static/blog/leads_form.css
+++ b/data_acid/blog/static/blog/leads_form.css
@@ -12,8 +12,9 @@
 }
 
 /* Form inputs and labels */
-
-#leadsForm input {
+#leadsForm input[type="text"],
+#leadsForm input[type="email"],
+#leadsForm input[id="id_salary_range"] {
     width: calc(100% - 16px); /* Adjust padding to maintain width */
     padding: 8px;
     margin-bottom: 10px;
@@ -24,7 +25,17 @@
     height: 40px; /* Set a fixed height for consistency */
 }
 
-/* Insert here*/
+#leadsForm select[id="id_salary_range"]{
+    width: calc(100% - 16px); /* Adjust padding to maintain width */
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid black;
+    border-radius: 1px;
+    box-sizing: border-box;
+    display: block;
+    height: 40px; /* Set a fixed height for consistency */
+
+}
 
 
 
@@ -32,17 +43,19 @@
     width: 100%;
     padding: 8px;
     margin-bottom: 10px;
-    border: 1px solid white;
+    border: 1px solid white; /* Example border for textarea */
     border-radius: 3px;
     box-sizing: border-box;
-
 }
+
 #leadsForm label {
     font-size: 14px;
     font-weight: bold;
     display: block;
     width: 100%; /* Set label width to 100% */
 }
+
+
 
 /* Form submit button */
 #leadsForm button {
