--- a/data_acid/blog/templates/blog/homepage.html
+++ b/data_acid/blog/templates/blog/homepage.html
@@ -1,1 +1,85 @@
 {% extends "blog/base.html" %}
+{% load static %}
+{% block header-homepage%} href= "{% static 'blog/homepage.css' %}" {% endblock %}
+{% block content %}
+<section>
+    <p>Services:</p>
+    <div>
+        <div class="mb1">
+            <div>Digital Marketing</div>
+            <div>Digital Strategy</div>
+            <div>Analytics</div>
+            <div>Programming</div>
+            <div>Enjoy</div>
+        </div>
+    </div>
+</section>
+
+<div class="mb1">
+    <div>Proyectos:</div>
+</div>
+
+<div class="accordion">
+    <h1>6 Figures in 3 Jumps</h1>
+    <hr>
+    <div class="container">
+        <div class="label">Roadmap to 30K</div>
+        <div class="content">
+            Hypertext Markup Language (HTML) is a computer language that makes up most web pages and online applications.
+            A hypertext is a text that is used to reference other pieces of text, while a markup language is a series
+            of markings that tells web servers the style and structure of a document. HTML is very simple to learn and
+            use.
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="{% static 'blog/images/coche.jpeg' %}" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="container">
+        <div class="label">Roadmap to 60K</div>
+        <div class="content">
+            CSS stands for Cascading Style Sheets. It is the language for describing the presentation of Web pages,
+            including colours, layout, and fonts, thus making our web pages presentable to the users. CSS is designed
+            to make style sheets for the web. It is independent of HTML and can be used with any XML-based markup
+            language. CSS is popularly called the design language of the web.
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="{% static 'blog/images/coche.jpeg' %}" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="container">
+        <div class="label">Roadmap to 6 Figures</div>
+        <div class="content">
+            JavaScript is a scripting or programming language that allows you to implement complex features on web
+            pages — every time a web page does more than just sit there and display static information for you to
+            look at — displaying timely content updates, interactive maps, animated 2D/3D graphics, scrolling video
+            jukeboxes, etc. — you can bet that JavaScript is probably involved. It is the third of the web trio.
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="{% static 'blog/images/coche.jpeg' %}" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr>
+</div>
+
+<script>
+    const accordions = document.querySelectorAll('.container');
+    accordions.forEach(item => {
+        item.addEventListener('click', function () {
+            this.classList.toggle('active');
+        });
+    });
+
+</script>
+
+
+
+
+{% endblock %}
