--- a/data_acid/blog/static/blog/homepage.css
+++ b/data_acid/blog/static/blog/homepage.css
@@ -1,93 +1,105 @@
-/* Basic reset and minimalistic styling */
-
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-}
-
-.nav-bar {
-    position: sticky;
-    top: 0;
-    background-color: white;
-    border-bottom: 1px solid black;
-}
-
-.navigation-links {
-    list-style-type: none;
+  /* General styles */
+  body {
+    font-family: 'Neue Haas Grotesk Text Std', sans-serif;
     margin: 0;
     padding: 0;
 }
 
-.navigation-links li {
-    display: inline;
-}
-
-.navigation-links a {
-    font-size: 12px;
-    display: inline-block;
-    color: black;
-    text-decoration: none;
-    padding: 12px 16px;
-    transition: color 0.3s ease;
-}
-
-.navigation-links a:hover {
-    color: #333; /* Darker color on hover */
-}
-
-.buttonMenu {
-    float: right;
-    color: black;
-    text-decoration: none;
-    padding: 12px 16px;
-    transition: color 0.3s ease;
-    display: none;
-}
-
-/*Content*/
-
-.content {
-    flex: 1; /* Flex grow to fill remaining space */
-}
-
-/*Footer*/
-
-.footer-container {
-    background-color: #f8f8f8;
-    padding: 20px;
-    width: 100%;
-    bottom: 0;
-   
-}
-
-.footer {
-    display: flex;
-    justify-content: space-between;
-    max-width: 1200px;
-    margin: 0 auto;
-    
-}
-
-.footer-heading {
-    flex: 1;
+h1 {
     text-align: center;
+}
+
+section p,
+.mb1 {
+    padding: 10px;
+    font-size: 14px;
+    letter-spacing: .03em;
+}
+
+.accordion {
+    width: 100%;
+    max-width: 800px;
+    margin: 90px auto;
+    color: black;
+    background-color: white;
     padding: 10px;
 }
 
-.footer-heading h2 {
-    margin-bottom: 10px;
+.accordion .container {
+    position: relative;
+}
+
+.accordion .label {
+    position: relative;
+    padding: 5px 0;
     font-size: 14px;
+    color: black;
+    cursor: pointer;
+    letter-spacing: .03em;
 }
 
-.footer-heading a {
-    display: block;
-    color: #333;
-    text-decoration: none;
-    margin-bottom: 5px;
-    transition: color 0.3s ease;
-    font-size:12px;
+.accordion .label::before {
+    content: '\02795';
+    color: black;
+    position: absolute;
+    top: 50%;
+    right: -5px;
+    font-size: 8px;
+    transform: translateY(-50%);
 }
 
-.footer-heading a:hover {
-    color: #666;
+.accordion .content {
+    position: relative;
+    background: white;
+    height: 0;
+    font-size: 14px;
+    text-align: justify;
+    width: 100%;
+    max-width: 780px;
+    overflow: hidden;
+    transition: 0.75s;
+}
+
+.blog-box {
+    width: 100%;
+    max-width: 650px;
+    background-color: #ffffff;
+    border: 1px solid #ececee;
+    margin: 0;
+}
+
+.blog-img img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    object-position: center;
+}
+
+.accordion hr {
+    width: 100%;
+    margin-left: 0;
+    border: 0.5px solid black;
+}
+
+.accordion .container.active .content {
+    height: 550px;
+}
+
+.accordion .container.active .label::before {
+    content: "\2796";
+}
+
+/* Mobile-specific styles */
+@media screen and (max-width: 450px) {
+    .accordion {
+        width: 100%;
+        margin-left: 0;
+        padding: 10px;
+    }
+
+    .blog-box {
+        margin: 20px 10px;
+        width: 100%;
+        max-width: 35%;
+    }
 }
