--- a/data_acid/blog/templates/blog/base.html
+++ b/data_acid/blog/templates/blog/base.html
@@ -5,9 +5,10 @@
 <head>
     {% load static %}
     <link rel="stylesheet" href= "{% static 'blog/base.css' %}">
-    <link rel="stylesheet" href= "{% static 'blog/base.css' %}">
     {%block header%}
     <link rel="stylesheet" {% block header-leads-form %}{% endblock %}>
+    <link rel="stylesheet" {% block header-homepage %}{% endblock %}>
+
     {%endblock%}
 </head>
 
@@ -25,8 +26,10 @@
     {% block content %}
     {% endblock %}
 
-    
 </body>
+
+
+
 <footer>
     <div class="footer-container">
         <div class="footer">
